--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ dist: trusty
 cache: false
 env:
 - URL=https://developer.salesforce.com/media/salesforce-cli/sfdx-linux-amd64.tar.xz
-before_install:
-- openssl aes-256-cbc -K $encrypted_f9ebb2d82e69_key -iv $encrypted_f9ebb2d82e69_iv
+before_install: 
+- openssl aes-256-cbc -K $encrypted_f9ebb2d82e69_key -iv $encrypt   ed_f9ebb2d82e69_iv
   -in assets/server.key.enc -out assets/server.key -d
 - export SFDX_AUTOUPDATE_DISABLE=true
 - export SFDX_USE_GENERIC_UNIX_KEYCHAIN=true
